[package]
name = "rhema-git-workflow-templates"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Git workflow templates for Rhema"
keywords = ["git", "workflow", "templates", "version-control"]
categories = ["development-tools"]

[dependencies]
rhema-core = { path = "../rhema-core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = "0.1"

[dev-dependencies]
tempfile = { workspace = true }
assert_fs = { workspace = true }
predicates = { workspace = true }
