[package]
name = "rhema-git"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Git integration and automation for Rhema"
keywords = ["git", "version-control", "workflow"]
categories = ["development-tools"]

[dependencies]
rhema-core = { path = "../rhema-core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
git2 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, features = ["time", "rt", "rt-multi-thread"] }
flate2 = { workspace = true }
walkdir = { workspace = true }
tar = { workspace = true }
regex = { workspace = true }
semver = "1.0"
# Security dependencies
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
keyring = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = { workspace = true }
assert_fs = { workspace = true }
predicates = { workspace = true } 