[package]
name = "rhema-locomo"
version = "0.1.0"
edition = "2021"
description = "LOCOMO (Language Model Context Optimization) benchmarks integration for Rhema"
license = "Apache-2.0"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { workspace = true, features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

# Performance and metrics
prometheus = "0.13"
dashmap = "5.5"
lru = "0.12"

# Rhema dependencies
rhema-core = { path = "../rhema-core" }
# rhema-knowledge = { path = "../rhema-knowledge" }  # Temporarily disabled due to compilation issues

# Optional dependencies for advanced features
bincode = "1.3"
rayon = "1.8"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8" 