[package]
name = "rhema-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Model Context Protocol daemon functionality for the Rhema Protocol"
keywords = ["mcp", "daemon", "protocol", "model-context"]
categories = ["development-tools"]

[dependencies]
rhema-core = { path = "../rhema-core" }
rhema-query = { path = "../rhema-query" }
# Official MCP SDK
rust-mcp-sdk = { version = "0.5.0", features = ["server", "2025_06_18", "hyper-server"] }
rust-mcp-schema = "0.7.2"
axum = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace", "compression-full", "set-header"] }
async-trait = { workspace = true }
nix = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dashmap = "5.5"
notify = "6.1"
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
base64 = "0.21"
redis = "0.23"
regex = "1.10"
serde_yaml = "0.9"
sysinfo = "0.30"
# Performance optimization dependencies
cached = "0.44"
futures = "0.3"
# Compression dependencies
flate2 = "1.0"
lz4 = "1.24"
zstd = "0.13"
snap = "1.1"
# Security dependencies
jsonwebtoken = "9.2"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
tower = "0.4"
http = "0.2"
# Performance dependencies
num_cpus = "1.16"

[dev-dependencies]
tempfile = { workspace = true }
assert_fs = { workspace = true }
predicates = { workspace = true } 