[package]
name = "rhema"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Rhema Protocol CLI - A standardized protocol for managing AI agent context through distributed YAML files in Git repositories"
keywords = ["git", "ai", "context", "yaml", "protocol", "agent", "cli"]
categories = ["command-line-utilities", "development-tools", "configuration"]

[[bin]]
name = "rhema"
path = "main.rs"

[dependencies]
rhema-api = { path = "../rhema-api" }
rhema-core = { path = "../core" }
rhema-query = { path = "../query" }
rhema-git = { path = "../git" }
rhema-ai = { path = "../ai" }
rhema-mcp = { path = "../mcp" }
rhema-config = { path = "../config" }
rhema-monitoring = { path = "../monitoring" }
rhema-integrations = { path = "../integrations" }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] } 