[package]
name = "rhema"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Rhema Protocol CLI - A standardized protocol for managing AI agent context through distributed YAML files in Git repositories"
keywords = ["git", "ai", "context", "yaml", "protocol", "agent", "cli"]
categories = ["command-line-utilities", "development-tools", "configuration"]

[[bin]]
name = "rhema"
path = "main.rs"

[dependencies]
rhema-api = { path = "../rhema-api" }
rhema-core = { path = "../rhema-core" }
rhema-query = { path = "../rhema-query" }
rhema-git = { path = "../rhema-git" }
rhema-ai = { path = "../rhema-ai" }
rhema-mcp = { path = "../rhema-mcp" }
rhema-config = { path = "../rhema-config" }
rhema-monitoring = { path = "../rhema-monitoring" }
rhema-integrations = { path = "../rhema-integrations" }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] } 