[package]
name = "rhema-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Command line interface and interactive mode for the Rhema Protocol"
keywords = ["cli", "interactive", "commands"]
categories = ["command-line-utilities"]

[dependencies]
rhema-core = { path = "../../crates/rhema-core" }
rhema-query = { path = "../../crates/rhema-query" }
rhema-git = { path = "../../crates/rhema-git" }
rhema-coordination = { path = "../../crates/rhema-coordination" }
rhema-mcp = { path = "../../crates/rhema-mcp" }
rhema-config = { path = "../../crates/rhema-config" }
rhema-knowledge = { path = "../../crates/rhema-knowledge" }
rhema-locomo = { path = "../../crates/rhema-locomo" }  # LOCOMO integration for performance monitoring and analytics
# rhema-monitoring = { path = "../../crates/rhema-monitoring" }
rhema-integrations = { path = "../../crates/rhema-integrations" }
rhema-action = { path = "../../crates/rhema-action" }
rhema-api = { path = "../../crates/rhema-api" }

clap = { workspace = true }
rustyline = { workspace = true }
shellexpand = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
rayon = { workspace = true }
dirs = { workspace = true }
semver = { workspace = true }
flate2 = { workspace = true }
sha2 = { workspace = true }
num_cpus = { workspace = true }
toml = { workspace = true }
lazy_static = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }
tempfile = { workspace = true }
markdown = { workspace = true }
syntect = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
openai = { workspace = true }
anthropic = { workspace = true }
nix = { workspace = true, features = ["fs"] }

[dev-dependencies]
tempfile = { workspace = true }
assert_fs = { workspace = true }
predicates = { workspace = true } 