[package]
name = "rhema"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Rhema Protocol CLI - A standardized protocol for managing AI agent context through distributed YAML files in Git repositories"
keywords = ["git", "ai", "context", "yaml", "protocol", "agent", "cli"]
categories = ["command-line-utilities", "development-tools", "configuration"]

[[bin]]
name = "rhema"
path = "main.rs"

[dependencies]
rhema-api = { path = "../../crates/rhema-api" }
rhema-core = { path = "../../crates/rhema-core" }
rhema-query = { path = "../../crates/rhema-query" }
rhema-git = { path = "../../crates/rhema-git" }
rhema-coordination = { path = "../../crates/rhema-coordination" }
rhema-mcp = { path = "../../crates/rhema-mcp" }
rhema-config = { path = "../../crates/rhema-config" }
rhema-monitoring = { path = "../../crates/rhema-monitoring" }
rhema-integrations = { path = "../../crates/rhema-integrations" }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
colored = "2.0"
atty = "0.2" 