[package]
name = "rhema-code-review-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core dependencies
serde.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
colored.workspace = true
serde_json = "1.0"

# Rhema dependencies
rhema-agent = { path = "../../rhema-agent" }
rhema-core = { path = "../../rhema-core" }
rhema-ai = { path = "../../rhema-ai" }
rhema-config = { path = "../../rhema-config" }
rhema-knowledge = { path = "../../rhema-knowledge" }

# Async and concurrency
futures.workspace = true
async-trait.workspace = true
tokio-stream.workspace = true

# Logging and observability
tracing.workspace = true

# Utilities
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8" 