[package]
name = "rhema-action-jest"
version = "0.1.0"
edition = "2021"
description = "Jest validation tool for Rhema actions"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
rhema-action-tool = { path = "../../rhema-action-tool" }
